<resources>
    <string name="app_name">Credit card form</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_titulo">Información de la tarjeta de credito</string>
    <string name="save_guardar">GUARDAR</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_num_tarjeta">Numero de Tarjeta</string>
    <string name="label_mes">Mes </string>
    <string name="label_año">Año </string>
    <string name="label_codigo">codigo </string>
    <string name="labe_direccion">Dirección</string>
    <string name="label_calle_num">Calle y Número</string>
    <string name="label_ciudad">Ciudad</string>
    <string name="label_estado">Estado</string>
    <string name="label_codigo_postal">Codigo postal</string>
    <string name="label_jesus_almaral">Jesus Almaral</string>
</resources>