<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">


    <!--titulo y guardar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_titulo" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registrar"
            android:text="@string/save_guardar"/>

    </LinearLayout>

    <!--nombre-apellido-numero tarjeta-->
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/label_nombre"
        android:id="@+id/nombre_edit"
        android:layout_height="60dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/apellido_edit"
        android:hint="@string/label_apellido"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/num_tarjeta"
        android:inputType="number"
        android:maxLength="16"
        android:hint="@string/label_num_tarjeta"/>

    <!--mes-año-codigo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:maxLength="2"
            android:id="@+id/mes_edit"
            android:hint="@string/label_mes"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:id="@+id/año_edit"
            android:maxLength="4"
            android:hint="@string/label_año"/>

        <EditText
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:maxLength="3"
            android:id="@+id/code_edit"
            android:hint="@string/label_codigo"/>

    </LinearLayout>

<!--llama al campo "detail_activity" que esta en el layout-->
<include layout="@layout/detail_activity"/>

</LinearLayout>