<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dierccion_edit"
                android:text="@string/labe_direccion"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/calle_num"
                android:hint="@string/label_calle_num"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ciudad_edi"
                android:hint="@string/label_ciudad"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:id="@+id/estado_edit"
                    android:hint="@string/label_estado" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:inputType="number"
                    android:id="@+id/code_postal"
                    android:hint="@string/label_codigo_postal" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="25dp"
                android:text="@string/label_jesus_almaral"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_baseline_credit_card_24"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:text="1234 5678 9012 3456"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="12/19"/>

            </LinearLayout>

        </LinearLayout>



    </ScrollView>



</androidx.cardview.widget.CardView>